jumping effect solved

--- a/BrndBot/web/static_resources/user/css/style_detail_overlay-1.css
+++ b/BrndBot/web/static_resources/user/css/style_detail_overlay-1.css
@@ -2753,6 +2753,7 @@ div#editor {
   width: 100%;
   overflow-y: scroll;
   display: block;
+  position:fixed;
 }
 
 .BBsaved-action-header-bar{
